--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,15 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pack app</title>
+  <title>Pack'd</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <header>
       <nav>
-        <div>
+        <div class="navbar navbar-inverse">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'home' %}">Pack'd</a>
+          </div>
           <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'search_city' %}">Search</a></li>
           {% if user.is_authenticated %}
             <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
