--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>pack app</h1>
+<h1>Pack'd</h1>
 <hr/>
-<p>pack</p>
+<h3>Log In</h3>
+<form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="login">
+    <input type="hidden" name="next" value="{{ next }}">
+  </form>
 
+<h3>Sign up</h3>
+{% if error_message %}<p>{{ error_message }}</p>{% endif %}
+
+<form method="post" action="{% url 'signup' %}">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="signup">
+</form>
 {% endblock %}
