--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link rel="stylesheet" href="/static/css/style.css">
+
+</head> 
+  <body>
     <header>
+
       <nav>
         <div class="navbar navbar-inverse">
           <div class="navbar-header">
@@ -24,10 +28,12 @@
             <li><a href="{% url 'login' %}">Log In</a></li>
           {% endif %}
           </ul>
-        </idv>
+        </div>
       </nav>
     </header>
+    
     {% block content %}
     {% endblock %}
+
 </body>
 </html>
