--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,33 +7,51 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link rel="stylesheet" href="/static/css/style.css">
-
+  
 </head> 
   <body>
-    <header>
-
-      <nav>
-        <div class="navbar navbar-inverse">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'home' %}">Pack'd</a>
-          </div>
-          <ul>
-            <li><a href="{% url 'search_city' %}">Search</a></li>
-          {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}">Log Out</a></li>
-          {% else %}
-            <li><a href="{% url 'signup' %}">Sign Up</a></li>
-            <li><a href="{% url 'login' %}">Log In</a></li>
-          {% endif %}
-          </ul>
-        </div>
-      </nav>
+  <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-success">
+            <div class="container-fluid py-1">
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="navbar-brand" href="/">Pack'd</a>
+                    </li>
+                </ul>
+                <form action="{% url 'searched_city' %}" method="POST" class="d-flex position-absolute translate-middle-x start-50" id="search-form"> 
+                  {% csrf_token %}
+                  <div class="input-group">
+                      <input class="form-control py-1 btn-outline-light btn-light text-dark" type="search" placeholder="Search" aria-label="Search" name="query" id="searchTextField">
+                      <button class="btn btn-outline-light py-1" type="submit" arial-label="search" id="search-button">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="36" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 18 18" id="basic-addon2">
+                              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                          </svg>
+                      </button>
+                  </div>
+                </form>
+                <ul class="navbar-nav ms  -auto">
+                  {% if user.is_authenticated %}
+                  <li class="d-flex align-items-center">
+                    <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
+                  </li>
+                  {% else %}
+                  <li class="d-flex align-items-center">
+                    <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign Up</a>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
+                  </li>
+                  {% endif %}
+                </ul>
+            </div>
+        </nav>
     </header>
-    
     {% block content %}
     {% endblock %}
 
+
+  <script type ="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
+  <script type ="text/javascript" src="/static/javascript/base.js"></script>
 </body>
 </html>
