--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,82 +1,97 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/css/style.css">
-</head> 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-sm navbar-dark" id="top-nav">
-        <div class="container-fluid">
-          <ul class="navbar-nav">
-            <li class="d-flex align-items-center">
-              <a class="nav-link py-1 my-0" role="button">
-                <svg role="img" xmlns="http://www.w3.org/2000/svg" width="36" height="24" fill="white" class="bi bi-plus py-0 my-0" viewBox="0 0 16 16" id="sidebar-button">
-                  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                </svg>
-              </a>
-            </li>
-            <a class="navbar-brand py-1.25" href="/">Pack'd</a>
-          </ul>
-          <form action="{% url 'searched_city' %}" method="POST" class="d-flex position-absolute translate-middle-x start-50" id="search-form"> 
-            {% csrf_token %}
-            <div class="input-group">
-              <input class="form-control py-1 btn-outline-light btn-light text-dark" type="search" placeholder="Search" aria-label="Search" name="query" id="searchTextField">
-                <button class="btn btn-outline-light py-1" type="submit" arial-label="search" id="search-button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 18 18" id="basic-addon2">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
-              </button>
-            </div>
-          </form>
-          <ul class="navbar-nav ms-auto">
-            {% if user.is_authenticated %}
-              <li class="d-flex align-items-center">
-                <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
-              </li>
-            {% else %}
-              <li class="d-flex align-items-center">
-                <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign Up</a>
-              </li>
-              <li class="d-flex align-items-center">
-              <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
-              </li>
-            {% endif %}
-          </ul>
-        </div>
-      </nav>
-    </header>
-      <div id="side-nav-container">
-        <nav class="navbar-dark" id="side-nav">
-          <ul class="navbar-nav">
-            {% if user.is_authenticated %}
-                <li>
-                  <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
-                </li>
-              {% else %}
-                <li>
-                  <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign Up</a>
-                </li>
-                <li>
-                <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
-                </li>
-              {% endif %}
-          </ul>
-        </nav>
-      </div>
-    <main>
+</head>
 
-      <div id="content">
-        {% block content %}
-        {% endblock %}
+<body>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-dark" id="top-nav">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="d-flex align-items-center">
+            <a class="nav-link py-1 my-0" role="button">
+              <svg role="img" xmlns="http://www.w3.org/2000/svg" width="36" height="24" fill="white"
+                class="bi bi-plus py-0 my-0" viewBox="0 0 16 16" id="sidebar-button">
+                <path fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+              </svg>
+            </a>
+          </li>
+          <a class="navbar-brand py-1.25" href="/">Pack'd</a>
+        </ul>
+        <form action="{% url 'searched_city' %}" method="POST"
+          class="d-flex position-absolute translate-middle-x start-50" id="search-form">
+          {% csrf_token %}
+          <div class="input-group">
+            <input class="form-control py-1 btn-outline-light btn-light text-dark" type="search" placeholder="Search"
+              aria-label="Search" name="query" id="searchTextField">
+            <button class="btn btn-outline-light py-1" type="submit" arial-label="search" id="search-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="18" fill="currentColor" class="bi bi-search"
+                viewBox="0 0 18 18" id="basic-addon2">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+              </svg>
+            </button>
+          </div>
+        </form>
+        <ul class="navbar-nav ms-auto">
+          {% if user.is_authenticated %}
+          <li class="d-flex align-items-center">
+            <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
+          </li>
+          {% else %}
+          <li class="d-flex align-items-center">
+            <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign Up</a>
+          </li>
+          <li class="d-flex align-items-center">
+            <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
+          </li>
+          {% endif %}
+        </ul>
       </div>
-    </main>
-      <script defer type ="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
-      <script defer type ="text/javascript" src="/static/javascript/base.js"></script>
-  </body>
+    </nav>
+  </header>
+  <div id="side-nav-container">
+    <nav class="navbar-dark" id="side-nav">
+      <ul class="navbar-nav">
+        {% if user.is_authenticated %}
+        <li>
+          <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
+        </li>
+        {% else %}
+        <li>
+          <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign Up</a>
+        </li>
+        <li>
+          <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
+  </div>
+  <main>
+
+    <div id="content">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </main>
+  <script defer type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
+  <script defer type="text/javascript" src="/static/javascript/base.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  {% block javascript %}
+  {% endblock javascript %}
+</body>
+
 </html>
