--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,7 +1,6 @@
-/* HTML */
-:root {
-    --top-nav: #dc3545;
-    --side-nav: #dc3545;
+HTML:root {
+    --top-nav: #edcd62;
+    --side-nav: #edcd62;
 }
 
 body {
