--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,12 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Log In</h3>
-<form method="post" action="{% url 'login' %}">
+<div class="container px-4 mt-5" id="mobile-container">
+  <h1 class="display-2">Hi,<br>traveller!</h1>
+  <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
+    {% comment %} <div class="mb-3">
+      <label for="login-email" class="form-label mb-1">Email Address</label>
+      <input type="email" class="form-control" id="login-email" name="email" aria-describedby="email" required>
+    </div> {% endcomment %}
+    <div class="mb-3">
+      <label for="login-username" class="form-label mb-1">Username</label>
+      <input type="text" class="form-control" id="login-username" aria-describedby="username" name="username" required>
+    </div>
+    <div class="mb-3">
+      <label for="login-password" class="form-label mb-1">Password</label>
+      <input type="password" class="form-control" id="login-password" name="password" required>
+    </div>
+    <div class="d-grid">
+      <input type="submit" class="btn rounded-pill py-2 mt-2 button-primary" value="Login">
+      <input type="hidden" name="next" value="{{ next }}">
+    </div>
   </form>
+  <p class="text-center text-muted my-2">or</p>
+  <div class="d-grid">
+    <a href="#" class="btn rounded-pill py-2 btn-secondary">Continue with Google</a>
+  </div>
+  <div class="d-grid">
+    <a href="#" class="btn rounded-pill py-2 my-2 btn-secondary">Continue with Facebook</a>
+  </div>
+</div>
 
 {% endblock %}
