--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -23,7 +23,7 @@
       </div>
     </form>
   </div> {% endcomment %}
-  <div class="container px-4 mt-5" id="index-container">
+  <div class="container mt-5" id="index-container">
     <div class="container" id="mobile-container">
       <div class="d-grid">
         <img class="img-fluid" src="{% static "images/globe.png" %}" alt="">
