--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,35 +7,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-sm navbar-dark" id="top-nav">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm navbar-light shadow" id="top-nav">
+      <div class="container-fluid px-3">
         <a class="navbar-brand" role="button">
-          <svg role="img" xmlns="http://www.w3.org/2000/svg" width="36" height="24" fill="white"
+          <svg role="img" xmlns="http://www.w3.org/2000/svg" width="36" height="24" fill="black"
             class="bi bi-plus py-0 my-0" viewBox="0 0 16 16" id="sidebar-button">
             <path fill-rule="evenodd"
               d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
           </svg>
         </a>
         {% if user.is_authenticated %}
-          <a class="navbar-brand position-absolute translate-middle-x start-50" href="/">{{ title }}</a>
+          <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">{{ title }}</a>
           <ul class="nav d-flex" id="top-nav-right">
             <li class="d-flex align-items-center">
               <a href="{% url 'logout' %}" class="nav-link px-2">Log Out</a>
             </li>
         {% else %}
-          <a class="navbar-brand position-absolute translate-middle-x start-50" href="/">Login</a>
-          {% comment %} <ul class="nav d-flex" id="top-nav-right">
+          {% comment %} <a class="navbar-brand position-absolute translate-middle-x start-50" href="/">Login</a> {% endcomment %}
+          <ul class="nav d-flex" id="top-nav-right">
             <li class="d-flex align-items-center">
               <a href="{% url 'signup' %}" class="nav-link px-2 my-0">Sign Up</a>
           </li>
           <li class="d-flex align-items-center">
             <a href="{% url 'login' %}" class="nav-link px-2 my-0">Log In</a>
-          </li> {% endcomment %}
+          </li>
         {% endif %}
         </ul>
       </div>
