readme & trip_form.js

--- a/main_app/templates/trips/trip_form.html
+++ b/main_app/templates/trips/trip_form.html
@@ -3,7 +3,7 @@
 {% load static %}
 <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
-<script type="text/javascript" src="/static/javascript/trip.js"></script>
+<script type="text/javascript" src="/static/javascript/trip_form.js"></script>
 
 <h3>add new trip</h3>
 
