--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -29,7 +29,7 @@
         <img class="img-fluid" src="{% static "images/globe.png" %}" alt="">
       </div>
       <div class="d-grid">
-        <a href="/trip/new" class="btn rounded-pill py-2 mt-4 button-primary">Add New Trip</a>
+        <a href="{% url 'new_trip' %}" class="btn rounded-pill py-2 mt-4 button-primary">Add New Trip</a>
       </div>
       <div class="d-grid">
         <a href="/trip/new" class="btn rounded-pill py-2 mt-3 btn-secondary disabled">View Trips</a>
