--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -103,6 +103,11 @@
     </button>
   </div>
 </div>
+{% for category in categories %}
+<div>{{category}}</div>
+
+{% endfor %}
+
 
 <script defer src="/static/javascript/trip.js"></script>
 
