--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,9 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static "css/style.css" %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-sm navbar-light shadow" id="top-nav">
@@ -23,22 +25,23 @@
           </svg>
         </a>
         {% if user.is_authenticated %}
-          <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">{{ title }}</a>
-          <ul class="nav d-flex" id="top-nav-right">
-            <li class="d-flex align-items-center">
-              <a href="{% url 'logout' %}" class="nav-link px-2">Log Out</a>
-            </li>
-        {% else %}
-          {% comment %} <a class="navbar-brand position-absolute translate-middle-x start-50" href="/">Login</a> {% endcomment %}
+        <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">{{ title
+          }}</a>
+        <ul class="nav d-flex" id="top-nav-right">
+          <li class="d-flex align-items-center">
+            <a href="{% url 'logout' %}" class="nav-link px-2">Log Out</a>
+          </li>
+          {% else %}
+
           <ul class="nav d-flex" id="top-nav-right">
             <li class="d-flex align-items-center">
               <a href="{% url 'signup' %}" class="nav-link px-2 my-0">Sign Up</a>
-          </li>
-          <li class="d-flex align-items-center">
-            <a href="{% url 'login' %}" class="nav-link px-2 my-0">Log In</a>
-          </li>
-        {% endif %}
-        </ul>
+            </li>
+            <li class="d-flex align-items-center">
+              <a href="{% url 'login' %}" class="nav-link px-2 my-0">Log In</a>
+            </li>
+            {% endif %}
+          </ul>
       </div>
     </nav>
   </header>
@@ -66,7 +69,8 @@
       {% endblock %}
     </div>
   </main>
-  <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
+  <script defer type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
   <script defer type="text/javascript" src="/static/javascript/base.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
