--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,12 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pack'd</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-
 </head>
 
 <body>
@@ -26,9 +24,10 @@
               d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
           </svg>
         </a>
+
+        <ul class="nav d-flex" id="top-nav-right"></ul>
+        <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">Pack'd</a>
         {% if user.is_authenticated %}
-        <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">{{ title
-          }}</a>
         <ul class="nav d-flex" id="top-nav-right">
           <li class="d-flex align-items-center">
             <a href="{% url 'logout' %}" class="nav-link px-2">Log Out</a>
@@ -47,10 +46,14 @@
       </div>
     </nav>
   </header>
+
   <div id="side-nav-container">
     <nav class="navbar-dark" id="side-nav">
       <ul class="navbar-nav">
         {% if user.is_authenticated %}
+        <li>
+          <a href="{% url 'profile' user.id %}" class="nav-link py-1 px-3 my-0">Profile</a>
+        </li>
         <li>
           <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
         </li>
