changed models, css, new_trip.html, changeds the new_trip function on views.py

--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -31,7 +31,7 @@
             <div class="form-check d-flex text-normal py-1 my-0 text-normal-indent">
               <div class="ms-0">
                 <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">{{ item.name}}</label>
+                <label class="form-check-label" for="flexCheckDefault">{{ item.name|title }}</label>
               </div>
               <div class="ms-auto d-flex score-div">
                 <svg width="16" height="24" viewBox="0 0 16 16" fill="#C4C4C4" xmlns="http://www.w3.org/2000/svg" class="score score-up me-auto">
