--- a/main_app/templates/trips/trip_form.html
+++ b/main_app/templates/trips/trip_form.html
@@ -2,9 +2,116 @@
 {% block content %}
 {% load static %}
 
+<div class="container px-4" id="mobile-container">
+  <form method="POST" action="{% url 'new_trip' %}">
+    {% csrf_token %}
+    <div class="mt-4">
+      <text class="text-header">ICON</text>
+      <text class="text-header">All Trips</text>
+    </div>
+    <div class="mt-4">
+      <label for="searchTextField" class="form-label text-header">Where are you going?</label>
+      <div class="input-group input-group-sm mb-3">
+        <input type="search" class="form-control" name="search" id="searchTextField" required>
+      </div>
+    </div>
+    <div class="mt-4">
+      <label for="searchTextField" class="form-label text-header">What day do you arrive?</label>
+      <div class="input-group input-group-sm mb-3">
+        <input type="date" class="form-control" name="date" id="date" required>
+      </div>
+    </div>
+    {% comment %} <div class="mt-4">
+      <label class="form-label text-header">Travellers</label>
+      <ol class="ps-4">
+        <li>
+          <a>User</a>
+        </li>
+        <li>
+          <a>User</a>
+        </li>
+      </ol>
+    </div>
+    <div class="text-center">
+      <button class="btn button-hover button-shadow border-0">
+        <text class="text-normal">+ Add traveller</text>
+      </button>
+    </div> {% endcomment %}
+    <div class="mt-4">
+      <label for="number_items" class="form-label text-header">How much do you want to pack?</label>
+      <div class="row g-3 mt-1">
+        <div class="col-4 ">
+          <label class="card card-shadow card-packing" for="number_items_light">
+            <input type="radio" class="btn-check" name="number_items" value="10" id="number_items_light">
+            <div class="card-body p-2 text-center">
+              <div>
+                <text class="text-card-title">Light</text>
+              </div>
+              <div>
+                <text class="text-card-normal">Less than 10 items</text>
+              </div>
+            </div>
+          </label>
+        </div>
+        <div class="col-4">
+          <label class="card card-shadow card-packing card-packing-active" for="number_items_medium">
+            <input type="radio" class="btn-check" name="number_items" value="15" id="number_items_medium" checked>
+            <div class="card-body p-2 text-center">
+              <div>
+                <text class="text-card-title">Medium</text>
+              </div>
+              <div>
+                <text class="text-card-normal">10 - 15<br>items</text>
+              </div>
+            </div>
+          </label>
+        </div>
+        <div class="col-4">
+          <label class="card card-shadow card-packing" for="number_items_heavy">
+            <input type="radio" class="btn-check" name="number_items" value="20" id="number_items_heavy" checked>
+            <div class="card-body p-2 text-center">
+              <div>
+                <text class="text-card-title">Heavy</text>
+              </div>
+              <div>
+                <text class="text-card-normal">15 - 20<br>items</text>
+              </div>
+            </div>
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="mt-4">
+      <label for="number_items" class="form-label text-header">What will you be doing there?</label>
+      <div class="row g-3 mt-1">
+        {% for activity in activities %}
+          {% if activity != "All" %}
+          <div class="col-4">
+            <label class="card card-shadow card-activity" for="activity-{{ activity }}">
+              <input type="checkbox" class="btn-check" name="activities" value="{{ activity }}" id="activity-{{ activity }}">
+              <div class="card-body p-1 d-flex flex-column justify-content-center align-items-center">
+                  <text class="text-activities align-middle">{{ activity }}</text>
+              </div>
+            </label>
+          </div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+    <div class="d-grid mt-2">
+      <button type="submit" class="btn rounded-pill py-2 mt-4 button-shadow button-primary">
+        <text class="text-card-title">Generate List</text>
+      </button>
+    </div>
 
-<h3>add new trip</h3>
+    {% comment %} <div class="d-grid mt-2">
+      <a href={% url "new_trip" %} class="btn rounded-pill py-2 mt-4 button-shadow button-primary">
+        <text class="text-card-title">Generate List</text>
+      </a>
+    </div> {% endcomment %}
+  </form>
 
+{% comment %} 
 <form method="POST" action="{% url 'new_trip' %}">
     {% csrf_token %}
     where are you going?<br>
@@ -42,7 +149,7 @@
     <input type="checkbox" name="option9"><br>
 
     <button>create my list</button>
-</form>
+</form> {% endcomment %}
 
 <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
 <script defer type="text/javascript" src="/static/javascript/trip_form.js"></script>
