--- a/main_app/templates/search/search.html
+++ b/main_app/templates/search/search.html
@@ -2,50 +2,136 @@
 {% block content %}
 {% load static %}
 
+<div class="container px-4" id="mobile-container">
+    <form method="POST" action="{% url 'results' %}">
+        {% csrf_token %}
+        <div class="mt-4">
+            <label for="searchTextField" class="form-label text-header">Where are you going?</label>
+            <div class="input-group input-group-sm mb-3">
+                <input type="search" class="form-control" name="search" id="searchTextField" required>
+            </div>
+        </div>
+        <div class="mt-4">
+            <label for="searchTextField" class="form-label text-header">What day do you arrive?</label>
+            <div class="input-group input-group-sm mb-3">
+                <input type="date" class="form-control" name="date" id="date" required>
+            </div>
+        </div>
 
-<h3>Search city</h3>
+        <div class="mt-4">
+            <label for="number_items" class="form-label text-header">How much do you want to pack?</label>
+            <div class="row g-3 mt-1">
+                <div class="col-4 ">
+                    <label class="card card-shadow card-packing" for="number_items_light">
+                        <input type="radio" class="btn-check" name="number_items" value="10" id="number_items_light">
+                        <div class="card-body p-2 text-center">
+                            <div>
+                                <text class="text-card-title">Light</text>
+                            </div>
+                            <div>
+                                <text class="text-card-normal">Less than 10 items</text>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+                <div class="col-4">
+                    <label class="card card-shadow card-packing card-packing-active" for="number_items_medium">
+                        <input type="radio" class="btn-check" name="number_items" value="15" id="number_items_medium"
+                            checked>
+                        <div class="card-body p-2 text-center">
+                            <div>
+                                <text class="text-card-title">Medium</text>
+                            </div>
+                            <div>
+                                <text class="text-card-normal">10 - 15<br>items</text>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+                <div class="col-4">
+                    <label class="card card-shadow card-packing" for="number_items_heavy">
+                        <input type="radio" class="btn-check" name="number_items" value="20" id="number_items_heavy"
+                            checked>
+                        <div class="card-body p-2 text-center">
+                            <div>
+                                <text class="text-card-title">Heavy</text>
+                            </div>
+                            <div>
+                                <text class="text-card-normal">15 - 20<br>items</text>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="mt-4">
+            <label for="number_items" class="form-label text-header">What will you be doing there?</label>
+            <div class="row g-3 mt-1">
+                {% for activity in activities %}
+                {% if activity != "All" %}
+                <div class="col-4">
+                    <label class="card card-shadow card-activity" for="activity-{{ activity }}">
+                        <input type="checkbox" class="btn-check" name="activities" value="{{ activity }}"
+                            id="activity-{{ activity }}">
+                        <div class="card-body p-1 d-flex flex-column justify-content-center align-items-center">
+                            <text class="text-activities align-middle">{{ activity }}</text>
+                        </div>
+                    </label>
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+        <div class="d-grid mt-2">
+            <button type="submit" class="btn rounded-pill py-2 mt-4 button-shadow button-primary">
+                <text class="text-card-title">Generate List</text>
+            </button>
+        </div>
 
-<form method="POST" action="{% url 'results' %}">
-    {% csrf_token %}
-    where are you going?<br>
-    <input type="text" id="searchTextField" name="search" placeholder="Search City..."><br>
-    date?<br>
-    <input type="date" name="date" required><br>
-    travelers<br>
-    <p style="color:grey;">placeholder for information of added travelers</p>
-    name<br>
-    <input type="text" name="traveler-name" placeholder="Name..."><br>
-    age group<br>
-    <select name="agegroup" default="none">
-        <option value="" disabled selected hidden>choose age group</option>
-        <option value="infant">Infant/Young Child (0-3)</option>
-        <option value="child">Child (3-17)</option>
-        <option value="adult">Adult (18+)</option>
-    </select><br>
-    how much do you want to pack?<br>
-    light
-    <input type="checkbox" name="light">
-    medium
-    <input type="checkbox" name="medium">
-    everything
-    <input type="checkbox" name="everything"><br>
+    </form>
 
-    select activities<br>
-    <input type="checkbox" name="option1">
-    <input type="checkbox" name="option2">
-    <input type="checkbox" name="option3"><br>
-    <input type="checkbox" name="option4">
-    <input type="checkbox" name="option5">
-    <input type="checkbox" name="option6"><br>
-    <input type="checkbox" name="option7">
-    <input type="checkbox" name="option8">
-    <input type="checkbox" name="option9"><br>
+    {% comment %}
+    <form method="POST" action="{% url 'new_trip' %}">
+        {% csrf_token %}
+        where are you going?<br>
+        <input type="text" id="searchTextField" name="search" placeholder="Search City..."><br>
+        what day do you arrive?<br>
+        <input type="date" name="date" required><br>
+        travelers<br>
+        <p style="color:grey;">placeholder for information of added travelers</p>
+        name<br>
+        <input type="text" name="traveler-name" placeholder="Name..."><br>
+        age group<br>
+        <select name="agegroup" default="none">
+            <option value="" disabled selected hidden>choose age group</option>
+            <option value="infant">Infant/Young Child (0-3)</option>
+            <option value="child">Child (3-17)</option>
+            <option value="adult">Adult (18+)</option>
+        </select><br>
+        how much do you want to pack?<br>
+        light
+        <input type="checkbox" name="light">
+        medium
+        <input type="checkbox" name="medium">
+        everything
+        <input type="checkbox" name="everything"><br>
 
-    <button>create my list</button>
-</form>
+        select activities<br>
+        <input type="checkbox" name="option1">
+        <input type="checkbox" name="option2">
+        <input type="checkbox" name="option3"><br>
+        <input type="checkbox" name="option4">
+        <input type="checkbox" name="option5">
+        <input type="checkbox" name="option6"><br>
+        <input type="checkbox" name="option7">
+        <input type="checkbox" name="option8">
+        <input type="checkbox" name="option9"><br>
 
-<script defer type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
-<script defer type="text/javascript" src="/static/javascript/trip_form.js"></script>
+        <button>create my list</button>
+    </form> {% endcomment %}
 
-{% endblock %}
+    <script defer type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
+    <script defer type="text/javascript" src="/static/javascript/trip_form.js"></script>
+
+    {% endblock %}
