finished filters for trip, css, added ability to filter personalized data

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -213,3 +213,8 @@ header {
     color: var(--score-down);
     fill: var(--score-down);
 }
+
+.text-personal {
+    font-weight: bold;
+    color: red;
+}
